WIP: Hadoop implement